--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://mundo.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
+dock_filesystem_selected_paths=PackedStringArray("res://chuncks/chuncks.json")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://world/", "res://player/", "res://platforms/", "res://chuncks/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -28,11 +28,11 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://player.tscn", "res://mundo.tscn")
-current_scene="res://mundo.tscn"
-center_split_offset=0
+open_scenes=PackedStringArray("res://platforms/mobile_platform.tscn", "res://objects/stalactite.tscn", "res://collectibles/coffee.tscn", "res://chuncks/chunck_loader.tscn", "res://world/mundo.tscn", "res://player/player.tscn")
+current_scene="res://objects/stalactite.tscn"
+center_split_offset=-257
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=1
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [EditorWindow]
@@ -43,8 +43,8 @@ position=Vector2i(0, 56)
 
 [ScriptEditor]
 
-open_scripts=["res://player.gd"]
-selected_script="res://player.gd"
+open_scripts=["res://chuncks/chuncks.json", "res://chuncks/chunck_loader.gd", "res://platforms/mobile_platform.gd", "res://player/player.gd"]
+selected_script="res://chuncks/chuncks.json"
 open_help=[]
 script_split_offset=200
 list_split_offset=0
